--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Hello!This is testing</title>
-    <link href="~/assets/css/style.css" type="text/css" rel="stylesheet" />
+    <link href="style.css" type="text/css" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -19,7 +19,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a href="">
-                        <img class="logo" src="~/assets/img/logo.png" />
+                        <img class="logo" src="logo.png" />
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="micon">
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 banner-image">
-                    <img src="~/assets/img/image.jpg" class="image-responsive"/>
+                    <img src="image.jpg" class="image-responsive"/>
                 </div>
             </div>
         </div>
